about page details

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>About page</p>
+        <p>This site was created by Marin. It uses data from mapbox.com and darksky.net</p>
         <div class="cloudapp-embed portrait" data-slug="f30f9445997a"><a href="http://files.mead.io/f30f9445997a">me.png</a><script async src="https://embed.cl.ly/embedded.gz.js" charset="utf-8"></script></div>
     </div>
     {{>footer}}
